force-app/main/default/objects/Submarket__c/Submarket__c.object-meta.xml
<CustomObject>
    <label>Submarket</label>
    <nameField>
        <label>Submarket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submarkets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>