force-app/main/default/objects/Submarket__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Continent__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Saint Lucia</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>Greenland</fullName>
            </value>
            <value>
                <fullName>Saint Kitts and Nevis</fullName>
            </value>
            <value>
                <fullName>South America Country 1</fullName>
            </value>
            <value>
                <fullName>South America Country 2</fullName>
            </value>
            <value>
                <fullName>South America Country 3</fullName>
            </value>
            <value>
                <fullName>Europe Country 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>