force-app/main/default/objects/Submarket__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Submarkets</relationshipLabel>
    <relationshipName>Submarkets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>